# calabi-yau-lab

./: .gitignore  ARTIFACTS.md  CHECKLIST.md  MILESTONES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/models/: fermat_quartic_invariant_potential.json  fermat_quartic_milestone3_best.json  fermat_quartic_milestone5_best.json  fermat_quintic_milestone5_best.json
configs/: fermat_quartic.yaml  fermat_quartic_milestone3.yaml  fermat_quintic.yaml
experiments/: run_all.py  run_fit_models.py  run_generate_data.py  run_invariants.py  run_milestone3.py  run_milestone4.py  run_milestone5.py  run_quotient_diagnostics.py  run_train_k3_potential.py  run_validate.py
reports/: milestone3_log.md  milestone3_section.md  milestone4_log.md  milestone4_section.md  milestone5_log.md  milestone5_section.md  paper.md  paper.tex  research_log.md
reports/tables/: milestone4_metric_definitions.csv  milestone4_metrics.csv  milestone4_theory_registry.csv  milestone5_benchmark_metrics.csv  milestone5_literature_refresh.csv  milestone5_sampling_counts.csv  milestone5_sweep.csv
src/cy_expansion_lab/: __init__.py  config.py
src/cy_expansion_lab/cy/: __init__.py  autodiff.py  fermat.py  holomorphic_volume.py  local_patch.py  projective.py  sampling.py
src/cy_expansion_lab/fit/: __init__.py  autodiff_linear.py  k3_potential.py  optimizers.py  (+2 more)
tests/: test_autodiff_geometry.py  test_autodiff_linear_training.py  test_invariant_potential.py  test_invariants.py  test_local_geometry.py  test_milestone3_reporting.py  test_models.py  test_sampling.py  test_theory_registry.py
(+25 files in other folders)
