[project]
name = "calabi-yau-lab"
version = "0.1.0"
description = "Research lab for invariant expansions of Calabi-Yau Kahler potentials."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jax>=0.4.30",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pyyaml>=6.0",
  "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cy_expansion_lab"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
